# image-folder-resizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  conf.py  index.md  performance.md  usage.md
scripts/: generate_badges.py  profile_resize.py
src/resizer/: __init__.py  aspect.py  cli.py  config.py  exceptions.py  image_ops.py  io.py  types.py
tests/: conftest.py  test_aspect.py  test_cli.py  test_config.py  test_exceptions.py  test_image_ops.py  test_io.py  test_types.py
